Code regeneration/Model synchronization

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    
 <input id='input_ffb88' autocomplete="off" value="Some Text..."  style="position: absolute; left: 49.83750915527344px; top: 27.88750457763672px; width: 120px; height: 30px; "> </input>
 
+   
+<button id='button_bf272'  style="position: absolute; left: 74.63749694824219px; top: 91.08753204345703px; width: 100px; height: 50px; ">Button</button>
+
  
   </div>
 
