--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    
 <button id='button_bf272'  style="position: absolute; left: 74.63749694824219px; top: 91.08753204345703px; width: 100px; height: 50px; ">Button</button>
 
+   
+<button id='button_57d08'  style="position: absolute; left: 81.03750610351562px; top: 170.2874984741211px; width: 100px; height: 50px; ">Button 2</button>
+
  
   </div>
 
